8252853: AArch64: gc/shenandoah/TestVerifyJCStress.java fails intermittently with C1

Reviewed-by: zgu, rkennke
Backport-of: 4fb1980fd0539230fdc310aad63bbda8cb1725e6